Testing preview feature

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import figmaLogo from "../assets/logos/Figma-logo.svg";
         logo: new URL("/favicon.svg", Astro.site).toString(),
         sameAs: [
           "https://x.com/guihubie",
-          "https://www.linkedin.com/in/guilherme-hubie/",
+          "https://www.linkedin.com/in/jamesfarrelly/",
         ],
       })}
     />
@@ -50,7 +50,7 @@ import figmaLogo from "../assets/logos/Figma-logo.svg";
     <main>
       <HeroSection
         title="James Farrelly"
-        subtitle="Leadership, Strategy, Developer, Set Designer and Culture Builder"
+        subtitle="Leadership, Strategy, Developer, Set Designer, Culture Builder and Election Inspector"
         showCTA
         primaryCTA={{ text: "View Projects", href: "/portfolio" }}
         secondaryCTA={{ text: "Read Blog", href: "/blog" }}
