Update homepage content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,6 +63,8 @@ import figmaLogo from "../assets/logos/Figma-logo.svg";
         <WorkExperience title="Work Experience" items={work} />
         <ArrowSeparator />
         <Studies title="Studies" items={studies} />
+        <ArrowSeparator />
+        <Studies title="Stage" items={stage} />
         <GlowLineSeparator />
       </section>
     </main>
