--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -2,6 +2,7 @@
 import { SITE_TITLE } from "../../consts";
 import HeaderLink from "./HeaderLink.astro";
 import ThemeToggle from "../ui/button/ThemeToggle.astro";
+import { author } from "../../data/author";
 ---
 
 <header class="bg-background text-foreground border-b sw-header">
@@ -51,26 +52,27 @@ import ThemeToggle from "../ui/button/ThemeToggle.astro";
         <div class="flex items-center gap-3">
             <div class="social-links hidden md:flex items-center gap-3">
                 <a
-                    href="https://x.com/guihubie"
+                    href={author.url}
                     target="_blank"
                     class="group text-[color:var(--color-text-secondary)]"
                 >
-                    <span class="sr-only">Follow on Twitter</span>
-                    <!-- X icon -->
+                    <span class="sr-only">Follow on LinkedIn</span>
+                    <!-- LinkedIn icon -->
                     <svg
                         viewBox="0 0 24 24"
                         width="24"
                         height="24"
                         aria-hidden="true"
                         class="transition-colors group-hover:text-[color:var(--accent)]"
-                        ><path
-                            fill="currentColor"
-                            d="M18.146 3H21l-7.5 8.574L22.5 21h-6.297l-4.93-5.597L5.5 21H3l8.106-9.266L3 3h6.453l4.466 5.07L18.146 3Zm-1.103 16.2h1.705L7.05 4.64H5.272l11.771 14.56Z"
-                        ></path></svg
                     >
+                        <path
+                            fill="currentColor"
+                            d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"
+                        ></path>
+                    </svg>
                 </a>
                 <a
-                    href="https://github.com/guihubie/free-astro-template"
+                    href="https://github.com/jamesfarrelly"
                     target="_blank"
                     class="group text-[color:var(--color-text-secondary)]"
                 >
@@ -123,7 +125,7 @@ import ThemeToggle from "../ui/button/ThemeToggle.astro";
             </div>
             <div class="flex items-center gap-4 pt-2">
                 <a
-                    href="https://x.com/guihubie"
+                    href={author.url}
                     target="_blank"
                     class="group inline-flex items-center text-[color:var(--color-text-secondary)]"
                 >
@@ -133,11 +135,12 @@ import ThemeToggle from "../ui/button/ThemeToggle.astro";
                         height="22"
                         aria-hidden="true"
                         class="transition-colors group-hover:text-white"
-                        ><path
-                            fill="currentColor"
-                            d="M18.146 3H21l-7.5 8.574L22.5 21h-6.297l-4.93-5.597L5.5 21H3l8.106-9.266L3 3h6.453l4.466 5.07L18.146 3Zm-1.103 16.2h1.705L7.05 4.64H5.272l11.771 14.56Z"
-                        ></path></svg
                     >
+                        <path
+                            fill="currentColor"
+                            d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"
+                        ></path>
+                    </svg>
                 </a>
                 <a
                     href="https://github.com/guihubie/free-astro-template"
